<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mapFragmentConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="6">


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:tag="mapTag">

    </androidx.fragment.app.FragmentContainerView>

    <FrameLayout
        android:id="@+id/mapFragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </FrameLayout>

    <CheckBox
        android:id="@+id/checkBoxMarker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/markers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPastFuture" />

    <CheckBox
        android:id="@+id/checkBoxPath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/tracks"
        app:layout_constraintStart_toStartOf="@+id/checkBoxMarker"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxMarker" />

    <CheckBox
        android:id="@+id/checkBoxLasers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/laserBeams"
        app:layout_constraintStart_toStartOf="@+id/checkBoxPath"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxPath" />

    <TextView
        android:id="@+id/textViewSeeAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/seeAll"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewPastFuture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/pastFutureLegend"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutPastFuture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/legend_background"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp">
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/checkBoxLasers">-->

        <TextView
            android:id="@+id/textViewPast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/past"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewPast"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageViewPast" />

        <ImageView
            android:id="@+id/imageViewPast"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:adjustViewBounds="true"
            app:layout_constraintStart_toEndOf="@+id/textViewFuture"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxLasers"
            app:srcCompat="@drawable/blue_marker" />

        <TextView
            android:id="@+id/textViewFuture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/future"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewFuture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageViewFuture" />

        <ImageView
            android:id="@+id/imageViewFuture"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:adjustViewBounds="true"
            app:layout_constraintStart_toEndOf="@+id/textViewFuture"
            app:layout_constraintTop_toBottomOf="@+id/imageViewPast"
            app:srcCompat="@drawable/green_marker" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>